--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,9 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": [],
+            "scripts": [
+              "../node_modules/jquery/dist/css/jquery.min.js"
+            ],
             "es5BrowserSupport": true
           },
           "configurations": {
